--- a/src/src/sass/modules/_components.sass
+++ b/src/src/sass/modules/_components.sass
@@ -11,20 +11,24 @@
 		padding: 20px
 		margin: 0
 		font-weight: 300
-		background: ($navbasecolor - $navheadermod)
+		background: ($navcolor)
+		text-align: center
 
 	a
 		display: block
 		color: $navfontcolor
 		font-size: 1.1em
 		font-weight: 300
+		transition: $transition
 
 		&:hover
 			background: ($navbasecolor - $navsecondarymod)
+			color: $activecolor2
 
 		&:active
 			background: ($navbasecolor + $navtitlemod)
 			color: $navbasecolor
+			transition: $transition
 			
 .cbp-spmenu-vertical
 	width: 240px
@@ -35,6 +39,7 @@
 	a
 		border-bottom: 1px solid ($navbasecolor - $navsecondarymod)
 		padding: 1em
+		text-align: center
 
 .cbp-spmenu-left
 	left: -240px
@@ -90,6 +95,12 @@
 	background: transparent
 	border: $paypalbtncolor 2px solid
 	color: $paypalbtncolor
+	transition: $transition
+
+	&:hover
+		transition: $transition
+		border-color: $activecolor
+		color: $activecolor
 
 	&:before, &:after
 		background: transparent
@@ -115,8 +126,10 @@
 	width: 68px
 	height: 68px
 	background: transparent
-	-webkit-touch-callout: none
-	user-select: none
+
+	@media only screen and (max-width: 600px)
+		transform: scale(0.8)
+		right: -60px
 
 
 // transition mask
