--- a/src/src/sass/layouts/_sections.sass
+++ b/src/src/sass/layouts/_sections.sass
@@ -130,20 +130,25 @@ p
 	text-align: left
 	width: 50%
 	float: left
-	padding-left: 15px
 
 	p
-		padding-top: 15px
-		padding-bottom: 15px
+		padding: 15px 10px
 		font-size: 1.35em
 
 	img
-		display: block
+		display: none
 		margin: 0 auto
 		max-width: 90%
 		max-height: 500px
 		height: auto
 		width: auto
+
+.article-content-responsive
+	box-shadow: 0px 0px 19px -10px
+	margin-left: 15px
+
+	p
+		padding: 15px 20px
 
 .article-gallery
 	width: 50%
@@ -166,7 +171,7 @@ p
 	transform: translateY(-50%)
 
 	img
-		width: 100%
+		max-width: 100%
 		height: 100%
 
 .gallery-row
@@ -197,3 +202,24 @@ blockquote
 		font-style: italic
 		font-size: 3em
 		color: #ccc
+
+.article-footer
+	clear:both
+	width: 100%
+
+.go-back
+	text-transform: capitalize
+	color: #ccc
+	font-size: 2em
+	position: absolute
+	left: 0
+	padding: 10px 20px
+
+.go-top
+	text-transform: capitalize
+	color: #ccc
+	font-size: 2em
+	position: absolute
+	right: 0
+	padding: 10px 20px
+
