tweaks before launch

--- a/src/src/sass/layouts/_sections.sass
+++ b/src/src/sass/layouts/_sections.sass
@@ -183,7 +183,7 @@ p
 .article-gradient
 	@include gradient( rgba(255,255,255,0), white)
 	width: 50%
-	height: 80px
+	height: 120px
 	position: fixed
 	bottom: 0
 
@@ -215,6 +215,10 @@ blockquote
 	left: 0
 	padding: 10px 20px
 
+	a
+		color: #ccc
+		text-decoration: none
+
 .go-top
 	text-transform: capitalize
 	color: #ccc
@@ -222,4 +226,4 @@ blockquote
 	position: absolute
 	right: 0
 	padding: 10px 20px
-
+	cursor: pointer
